# cpp-examples

./: CMakeLists.txt  build_and_test_all.sh  build_and_test_cxx11.sh  simple_assert.h
assert/: simple_assert.h
basic_types/: CMakeLists.txt  basic_type_info.cpp  constexpr.cpp  enum.cpp  literal.cpp  lvalue_ref_and_pointer.cpp  type_convert.cpp  type_info.h
class/: CMakeLists.txt  const_this.cpp  default_constructor.cpp  friend.cpp
container/: CMakeLists.txt  string.cpp  vector.cpp
function/: CMakeLists.txt  function_pointer.cpp
operator/: CMakeLists.txt  alternative_operator_repr.cpp
type_system/: CMakeLists.txt  basic_types.cpp  left_reference.cpp  type_convert_when_init.cpp
